# PicoGamepadConverter

./: .gitmodules  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
src/: CMakeLists.txt  config.h  convert_data.c  convert_data.h  hcd_pio_usb.c  hid_definitions.h  main.c  psx_definitions.h  tusb_config.h  utils.c  utils.h  xinput_definitions.h
src/btstack/src/classic/: hid_host.c
src/device_files/: usb_descriptors.c
src/device_files/bluehid-lib/: BtStackUtils.h  CMakeLists.txt  blue_hid.c  blue_hid.h  bluetooth_descriptors.h
src/device_files/gc-device/: CMakeLists.txt
src/device_files/psx-device/: CMakeLists.txt  controller_simulator.c  controller_simulator.h  psxSPI.pio
src/device_files/rndis-lib/: CMakeLists.txt  pack  packed_fs.c  rndis.c  rndis.h
src/device_files/rndis-lib/web_root/: features.html  index.html
src/device_files/switch/: PS3_Descriptors.h  SwitchDescriptors.h  hid_driver.c  hid_driver.h
src/device_files/wiimote-lib/: CMakeLists.txt  wiimote.h  wiimote_btstack.c
src/device_files/xinput/: xinput_driver.c  xinput_driver.h
src/flash-lib/: CMakeLists.txt  pico_flash.c  pico_flash.h
src/host_files/: xinput_host.c  xinput_host.h
src/host_files/bluehost-lib/: CMakeLists.txt  blue_host.c  blue_host.h
src/host_files/joybus_host/: CMakeLists.txt  controller.pio  joybus_controller.c  joybus_controller.h  n64_controller.c  n64_controller.h
src/host_files/parser-lib/: CMakeLists.txt  HID_enums.h  gamepad_parser.c  gamepad_parser.h
src/host_files/ps2kbd-lib/: CMakeLists.txt  ps2kbd.c  ps2kbd.h  ps2kbd.pio
src/host_files/psx-lib/: CMakeLists.txt  clock.pio  psx.c  psx.h
